# OOP-Lab-5

./: CMakeLists.txt  README.md
include/: customMemoryResource.h  forwardList.h
src/: customMemoryResource.cpp  main.cpp
tests/: tester.cpp
